--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@
 html {
   box-sizing: border-box; }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
 body {
   max-width: 1280px;
   margin: 0 auto; }
@@ -15,7 +24,7 @@ body {
   background-color: #ffffff; }
 
 .charts-form__select-container {
-  padding: 32px 22px 33px 25px;
+  padding: 32px;
   background-color: #5EA1F2; }
 
 .charts-form__select {
@@ -49,6 +58,9 @@ body {
   margin: 0;
   padding: 0; }
 
+.charts-form__status-container {
+  padding: 39px 41px; }
+
 .charts-form__status-wrapper {
   display: flex;
   align-items: center;
@@ -56,10 +68,10 @@ body {
 
 .charts-form__status-block {
   margin-right: 42px;
-  padding-top: 39px;
-  padding-bottom: 40px; }
-  .charts-form__status-block:first-child {
-    margin-left: 41px; }
+  margin-bottom: 40px; }
+  .charts-form__status-block_coords {
+    margin-top: 40px;
+    margin-bottom: 0; }
 
 .charts-form__status-caption {
   margin: 0;
@@ -83,7 +95,8 @@ body {
   color: #0e619d; }
 
 .chart__caption {
-  margin: 19px 34px 17px 34px;
+  margin: 0;
+  margin-bottom: 17px;
   padding: 0;
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -95,6 +108,7 @@ body {
 .chart_pie {
   width: 274px;
   height: 271px;
+  padding: 17px 36px;
   background-color: #F3FAFF; }
 
 .chart__pie {
@@ -142,7 +156,7 @@ body {
 
 .charts-form__tab-item {
   display: none;
-  padding: 40px 41px; }
+  padding: 41px; }
   .charts-form__tab-item_active {
     display: block; }
 
@@ -213,7 +227,7 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
-  margin-bottom: 37px;
+  margin-bottom: 25px;
   padding: 0;
   list-style: none; }
 
@@ -260,14 +274,26 @@ body {
 .charts-form__map {
   width: 49%;
   height: 100%;
+  margin-right: 20px;
   background-color: green; }
+  .charts-form__map iframe {
+    width: 100%;
+    height: 401px; }
 
 .charts-form__summary-chart {
-  width: 49%;
+  width: 405px;
   height: 100%; }
-  .charts-form__summary-chart .chart__pie {
-    width: 405px;
-    height: 401px; }
+
+.chart_pie-summary {
+  width: 100%;
+  height: 100%;
+  padding: 17px 36px;
+  background-color: #F3FAFF; }
+  .chart_pie-summary .chart__caption {
+    margin-bottom: 20px; }
+  .chart_pie-summary .chart__pie {
+    max-width: 299px;
+    max-height: 296px; }
 
 .chart_bar {
   width: 100vw;
