--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   margin: 0 auto; }
 
 .charts {
+  font-family: "Roboto", sans-serif;
   background-color: #ffffff; }
 
 .charts-form__select-container {
@@ -38,7 +39,7 @@ body {
   padding-left: 20px;
   border: 1px solid #CACFD9;
   border-radius: 6px;
-  font-family: "SF UI Display";
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -77,7 +78,7 @@ body {
   margin: 0;
   margin-bottom: 2px;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -87,7 +88,7 @@ body {
 .charts-form__status-text {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -98,7 +99,7 @@ body {
   margin: 0;
   margin-bottom: 17px;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -133,7 +134,7 @@ body {
 .charts-form__tab-button {
   margin-right: 37px;
   padding: 5px;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -174,7 +175,7 @@ body {
   margin: 0;
   margin-bottom: 11px;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -189,7 +190,7 @@ body {
   background: #ffffff;
   border: 1px solid #cacfd9;
   border-radius: 6px;
-  font-family: "SF UI Display";
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -205,7 +206,7 @@ body {
   height: 70px;
   width: 300px;
   border: 1px solid #c0c0c0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -247,7 +248,7 @@ body {
 .charts-form__info-caption {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -258,7 +259,7 @@ body {
 .charts-form__info-text {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
