--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   background-color: #ffffff; }
 
 .charts-form__select-container {
-  padding: 32px;
+  padding: 40px;
   background-color: #5EA1F2; }
 
 .charts-form__select {
@@ -64,7 +64,7 @@ body {
   padding: 0; }
 
 .charts-form__status-container {
-  padding: 39px 41px; }
+  padding: 40px; }
 
 .charts-form__status-wrapper {
   display: flex;
@@ -75,8 +75,8 @@ body {
   margin-right: 42px;
   margin-bottom: 40px; }
   .charts-form__status-block_coords {
-    margin-top: 40px;
-    margin-bottom: 0; }
+    margin-top: 25px;
+    margin-bottom: 20px; }
 
 .charts-form__status-caption {
   margin: 0;
@@ -131,7 +131,7 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
-  padding: 14px 42px;
+  padding: 14px 40px;
   background-color: #5EA1F2;
   list-style: none; }
 
@@ -161,7 +161,7 @@ body {
 
 .charts-form__tab-item {
   display: none;
-  padding: 41px; }
+  padding: 40px; }
   .charts-form__tab-item_active {
     display: block; }
 
@@ -201,10 +201,14 @@ body {
   line-height: 20px;
   color: #22365f; }
 
+.charts-form__table-container {
+  overflow: none; }
+
 .charts-form__table {
+  min-width: 980px;
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 37px; }
+  margin-bottom: 35px; }
 
 .log-table__cell {
   height: 70px;
@@ -238,7 +242,7 @@ body {
 .charts-form__info-item {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   box-sizing: border-box;
   width: calc((100% - 50px) / 6);
   height: 89px;
@@ -318,6 +322,9 @@ body {
   list-style: none; }
 
 .first-start__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 15px;
   padding: 13px;
   background-color: #f3f3f3; }
@@ -376,6 +383,9 @@ body {
     padding: 0;
     list-style: none; }
   .charts-form__stats .stats__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: calc((100% - 75px) / 6);
     margin: 0;
     margin-right: 15px;
@@ -411,6 +421,113 @@ body {
 .chart__bar {
   width: 600px;
   height: 600px; }
+
+@media (max-width: 768px) {
+  .charts-form__select-container {
+    padding: 25px; }
+  .charts-form__status-container {
+    padding: 25px; }
+  .charts-form__tab-menu {
+    padding: 14px 25px; }
+  .charts-form__tab-item {
+    padding: 25px; }
+  .charts-form__table-container {
+    overflow: scroll; }
+  .charts-form__date-filter-container {
+    display: flex;
+    flex-direction: column;
+    margin-right: 0; }
+    .charts-form__date-filter-container:first-child {
+      margin-bottom: 15px; }
+  .charts-form__date-filter-wrapper {
+    flex-direction: column;
+    margin-bottom: 35px; }
+  .charts-form__date-filter-date {
+    display: flex;
+    align-items: center;
+    width: 293px;
+    padding: 12px 20px;
+    background: #ffffff;
+    border: 1px solid #cacfd9;
+    border-radius: 6px;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #22365f; }
+  .charts-form__info-item {
+    width: calc((100% - 30px) / 4);
+    margin-right: 10px; }
+    .charts-form__info-item:nth-child(6n) {
+      margin-right: 10px; }
+    .charts-form__info-item:nth-child(4n) {
+      margin-right: 0; }
+  .charts-form__summary-container {
+    justify-content: space-between;
+    height: 270px; }
+  .charts-form__map {
+    width: 59%;
+    margin-right: 0; }
+    .charts-form__map iframe {
+      height: 270px; }
+  .charts-form__summary-chart {
+    width: 40%; }
+  .chart_pie-summary .chart__caption {
+    margin-bottom: 0px; }
+  .charts-form__stats .stats__item {
+    width: calc((100% - 45px) / 4);
+    margin-right: 15px; }
+    .charts-form__stats .stats__item:nth-child(6n) {
+      margin-right: 15px; }
+    .charts-form__stats .stats__item:nth-child(4n) {
+      margin-right: 0; } }
+
+@media (max-width: 576px) {
+  .charts-form__select-container {
+    padding: 20px; }
+  .charts-form__status-container {
+    padding: 20px; }
+  .charts-form__tab-menu {
+    padding: 14px 20px; }
+  .charts-form__tab-item {
+    padding: 20px; }
+  .charts-form__status-wrapper_charts {
+    justify-content: center; }
+    .charts-form__status-wrapper_charts .chart {
+      margin-bottom: 15px; }
+  .charts-form__date-filter-date {
+    width: 100%; }
+  .charts-form__info-item {
+    width: calc((100% - 10px) / 2);
+    margin-right: 10px;
+    margin-bottom: 10px; }
+    .charts-form__info-item:nth-child(6n) {
+      margin-right: 10px; }
+    .charts-form__info-item:nth-child(4n) {
+      margin-right: 10px; }
+    .charts-form__info-item:nth-child(2n) {
+      margin-right: 0; }
+  .first-start__item {
+    width: calc((100% - 15px) / 2);
+    margin-right: 15px;
+    margin-bottom: 15px; }
+    .first-start__item:nth-child(6n) {
+      margin-right: 15px; }
+    .first-start__item:nth-child(4n) {
+      margin-right: 15px; }
+    .first-start__item:nth-child(2n) {
+      margin-right: 0; }
+  .charts-form__stats .stats__item {
+    width: calc((100% - 15px) / 2);
+    margin-right: 15px;
+    margin-bottom: 15px; }
+    .charts-form__stats .stats__item:nth-child(6n) {
+      margin-right: 15px; }
+    .charts-form__stats .stats__item:nth-child(4n) {
+      margin-right: 15px; }
+    .charts-form__stats .stats__item:nth-child(2n) {
+      margin-right: 0; } }
 
 .visually-hidden {
   position: absolute;
