--- a/css/style.css
+++ b/css/style.css
@@ -416,12 +416,21 @@ body {
 
 .chart_bar {
   width: 100%;
-  height: 870px;
-  background-color: #f3f3f3; }
+  height: 600px;
+  background-color: #f3f3f3;
+  position: relative;
+}
 
-.chart__bar {
-  width: 600px;
-  height: 600px; }
+#chart-bar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0px;
+  left: 0;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 .dropdown {
   display: none;
