--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: "SF UI Display";
-  font-style: normal;
-  font-weight: 400;
-  src: local("SF UI Display"), local("SF UI Display-Regular"), url("../fonts/SFUIDisplay/SFUIDisplay-Regular.ttf") format("truetype"); }
-
 html {
   box-sizing: border-box; }
 
@@ -136,9 +130,14 @@ body {
   background-color: #5EA1F2;
   list-style: none; }
 
+.charts-form__tab-menu-item {
+  margin-right: 35px; }
+  .charts-form__tab-menu-item:last-child {
+    margin-right: 0; }
+
 .charts-form__tab-button {
-  margin-right: 37px;
   padding: 5px;
+  border: none;
   font-family: inherit;
   font-style: normal;
   font-weight: normal;
@@ -146,13 +145,11 @@ body {
   line-height: 16px;
   color: #ffffff;
   background-color: transparent;
-  border: none;
   cursor: pointer; }
   .charts-form__tab-button_active {
     font-weight: bold;
     text-decoration-line: underline; }
   .charts-form__tab-button:hover {
-    font-weight: bold;
     text-decoration-line: underline; }
 
 .charts-form__tab-list {
