--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -122,7 +122,8 @@ body {
 
 .chart__caption {
     margin: 0;
-    margin-bottom: 17px;
+    margin-top: 15px;
+    margin-left: 15px;
     padding: 0;
 
     font-family: inherit;
@@ -134,10 +135,10 @@ body {
 }
 
 .chart_pie {
-    width: 274px;
-    height: 274px;
+    width: 225px;
+    height: 240px;
 
-    padding: 15px;
+    // padding: 15px;
     margin-bottom: 10px;
 
     background-color: $pie_back_color;
@@ -148,6 +149,8 @@ body {
     height: 100%;
     max-width: 202px;
     max-height: 202px;
+    // max-width: 259px;
+    // max-height: 251px;
     margin: 0 auto;
     margin-top: 5px;
 }
@@ -717,6 +720,8 @@ body {
         width: 274px;
         height: 274px;
         padding: 17px 36px;
+        padding: 0;
+
         background-color: #f3faff;
         margin-right: 0;
         margin-bottom: 15px;
@@ -730,6 +735,13 @@ body {
             max-height: 296px;
 
             margin-top: 0;
+
+            &_summary {
+                width: 250px;
+                height: 230px;
+
+                margin: 0 auto;
+            }
         }
     }
 
@@ -777,6 +789,7 @@ body {
 
     .charts-form__status-wrapper_charts {
         justify-content: center;
+        flex-direction: column;
 
         .chart {
             margin-right: 0;
