add button, new diagram style, adaptive fix

--- a/css/style.css
+++ b/css/style.css
@@ -93,34 +93,60 @@ body {
   line-height: 16px;
   color: #0e619d; }
 
-.chart__caption {
-  margin: 0;
-  margin-top: 15px;
-  margin-left: 15px;
-  padding: 0;
+.charts-form__refresh {
+  margin-bottom: 15px;
+  padding: 10px 15px;
+  border: none;
   font-family: inherit;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
-  color: #000000; }
+  color: #ffffff;
+  background-color: #5EA1F2;
+  cursor: pointer; }
+  .charts-form__refresh:hover {
+    background-color: #8bbbf7; }
+  .charts-form__refresh:active {
+    background-color: #406da3; }
+  .charts-form__refresh:disabled {
+    background-color: #86909c; }
+
+.chart {
+  background-color: #f3faff; }
 
 .chart_pie {
-  width: 225px;
-  height: 240px;
-  margin-bottom: 10px;
-  background-color: #F3FAFF; }
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  max-width: 300px;
+  max-height: 300px;
+  margin-right: 15px; }
+  .chart_pie .chart__container {
+    justify-self: flex-end;
+    margin: auto;
+    width: 200px;
+    height: 200px; }
+  .chart_pie .chart__caption {
+    align-self: flex-start;
+    margin: 15px 0 0 25px;
+    padding: 0;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000; }
+  .chart_pie .chart__pie {
+    width: 100%;
+    height: 100%; }
 
-.chart__pie {
-  width: 100%;
+.chart_pie-summary {
   height: 100%;
-  max-width: 202px;
-  max-height: 202px;
-  margin: 0 auto;
-  margin-top: 5px; }
-
-.charts-form__status-wrapper .chart_pie {
-  margin-right: 10px; }
+  max-width: 405px;
+  max-height: 600px;
+  margin-right: 0; }
+  .chart_pie-summary .chart__container {
+    margin: auto;
+    width: 100%;
+    height: 100%; }
 
 .charts-form__tab-menu {
   display: flex;
@@ -256,7 +282,7 @@ body {
   justify-content: space-between;
   box-sizing: border-box;
   width: calc((100% - 50px) / 6);
-  height: 89px;
+  min-height: 90px;
   margin: 0;
   margin-bottom: 12px;
   margin-right: 10px;
@@ -268,6 +294,7 @@ body {
 
 .charts-form__info-title {
   margin: 0;
+  margin-bottom: 10px;
   padding: 0;
   font-family: inherit;
   font-style: normal;
@@ -305,17 +332,6 @@ body {
 .charts-form__summary-chart {
   width: 405px;
   height: 100%; }
-
-.chart_pie-summary {
-  width: 100%;
-  height: 100%;
-  padding: 17px 36px;
-  background-color: #f3faff; }
-  .chart_pie-summary .chart__caption {
-    margin-bottom: 20px; }
-  .chart_pie-summary .chart__pie {
-    max-width: 299px;
-    max-height: 296px; }
 
 .charts-form__first-start {
   margin-bottom: 30px; }
@@ -426,20 +442,18 @@ body {
     margin-bottom: 10px; }
 
 .chart_bar {
+  position: relative;
   width: 100%;
   height: 600px;
-  background-color: #f3f3f3;
-  position: relative; }
+  background-color: #f3f3f3; }
 
-#chart-bar {
+.chart__bar {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0px;
   left: 0;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  padding: 10px; }
 
 @media screen and (max-width: 900px) {
   .charts-form__table-container {
@@ -504,21 +518,7 @@ body {
   .chart_pie-summary {
     width: 274px;
     height: 274px;
-    padding: 17px 36px;
-    padding: 0;
-    background-color: #f3faff;
-    margin-right: 0;
     margin-bottom: 15px; }
-    .chart_pie-summary .chart__caption {
-      margin-bottom: 0px; }
-    .chart_pie-summary .chart__pie {
-      max-width: 296px;
-      max-height: 296px;
-      margin-top: 0; }
-      .chart_pie-summary .chart__pie_summary {
-        width: 250px;
-        height: 230px;
-        margin: 0 auto; }
   .charts-form__stats .stats__item {
     width: calc((100% - 45px) / 4);
     margin-right: 15px; }
@@ -540,7 +540,7 @@ body {
   .charts-form__tab-item {
     padding: 20px; }
   .charts-form__table-container {
-    overflow: visible; }
+    overflow: hidden; }
   .charts-form__status-wrapper_charts {
     justify-content: center;
     flex-direction: column; }
@@ -575,15 +575,11 @@ body {
     .charts-form__stats .stats__item:nth-child(4n) {
       margin-right: 15px; }
     .charts-form__stats .stats__item:nth-child(2n) {
-      margin-right: 0; } }
-
-@media screen and (max-width: 576px) {
+      margin-right: 0; }
   .charts-form__table-container {
     margin-bottom: 35px;
     padding: 10px;
-    max-height: 80vh;
-    border: 1px solid #c0c0c0;
-    overflow: scroll; }
+    border: 1px solid #c0c0c0; }
     .charts-form__table-container .charts-form__table {
       min-width: 100%;
       width: 100%; }
