--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,8 @@
 $form_back_color: #5EA1F2;
+$button_main_color: $form_back_color;
+$button_hover_color:  #8bbbf7;
+$button_active_color:  #406da3;
+$button_disabled_color:  #86909c;
 
 $select_border_color: #CACFD9;
 
